Fix color of debug log text.

--- a/remotepanel.html
+++ b/remotepanel.html
@@ -550,7 +550,7 @@ function setup() {
         <button style="width:auto;height:auto;margin:12px;" onclick="reload();">Reload</button>
     </div>
 
-    <p id="log" name="log" style="color:white;">&nbsp;<br/></p>
+    <div id="log" name="log"><br/></div>
 
 </body>
 </html>
