--- a/fp30remote.html
+++ b/fp30remote.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>FP30 Remote</title>
+        <title>FP-30 Remote Control</title>
         <meta charset="utf-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -584,7 +584,7 @@ function setup() {
 
 </head>
 <body onload="setup();">
-    <div><h2>FP30 Remote Control</h2></div>
+    <div><h2>FP-30 Remote Control</h2></div>
     <div class="grid-container">
         <div>Interface</div>
         <div>
