--- a/fp30remote.html
+++ b/fp30remote.html
@@ -77,6 +77,9 @@ div {
     margin:2px;
     cursor:pointer;
 }
+b {
+    background-color: #ffc;
+}
 
 @media (prefers-color-scheme: dark) {
     body {
@@ -84,6 +87,9 @@ div {
     }
     select {
         background: #333;
+    }
+    b {
+        background-color: #666;
     }
 }
     </style>
