Fix HTML validator warnings.

--- a/fp30remote.html
+++ b/fp30remote.html
@@ -100,7 +100,7 @@ b {
 }
     </style>
 
-<script type="text/javascript">
+<script>
 // global access
 let midi = null;
 let midioutput = null;
@@ -721,7 +721,7 @@ function toggleGrid(name) {
     </div>
 
 
-    <div id="log" name="log"><br/></div>
+    <div id="log"><br/></div>
 
 </body>
 </html>
