--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
     <head>
         <title>Roland FP-30 Remote Control</title>
         <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -7,7 +8,6 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="mobile-web-app-capable" content="yes" />
         <meta name="color-scheme" content="dark light">
-    </head>
     <style>
 body {
     font-family: verdana,sans-serif;
@@ -42,6 +42,7 @@ b {
     }
 }
     </style>
+    </head>
     <body>
         <h2>Roland FP-30 Remote Control</h2>
         <p>
@@ -69,9 +70,11 @@ b {
             </ul>
         <p>
             The page uses cookies to store
+        </p>
             <ul>
                 <li>selected MIDI device: (try to) reconnect on load.</li>
             </ul>
+        <p>
             Cookies are not supported for local files. This is a browser
             limitation; when using from a local copy cookie functionality will
             not work.
